syntax = "proto3";

option go_package = "github.com/guatom999/Go-MicroService";

message PlayerProfile {
    string id = 1;
    string email = 2;
    string username = 3;
    int32 roleCode = 4;
    string creadted_at = 5;
    string updated_at = 6;
}

message CredetialSearchReq {
    string email = 1;
    string password = 2;
}

message FindOnePlayerProfileToRefreshReq {
    string playerId = 1;
}

message GetPlayerSavingAccountReq {
    string playerId = 1;
}

message PlayerSavingAccount {
    string playerId = 1;
    double balance = 2;
}

service PlayerGrpcService {
    rpc CredetialSearch(CredetialSearchReq) returns (PlayerProfile);
    rpc FindOnePlayerProfileToRefresh(FindOnePlayerProfileToRefreshReq) returns (PlayerProfile);
    rpc GetPlayerSavingAccount(GetPlayerSavingAccountReq) returns (PlayerSavingAccount);
}